@@ -893,6 +893,8 @@ display_configuration(lldpctl_conn_t *conn, struct writer *w)
 	    N(lldpctl_atom_get_str(configuration, lldpctl_k_config_mgmt_pattern)));
 	tag_datatag(w, "iface-pattern", "Interface pattern",
 	    N(lldpctl_atom_get_str(configuration, lldpctl_k_config_iface_pattern)));
+	tag_datatag(w, "perm-iface-pattern", "Permanent interface pattern",
+	    N(lldpctl_atom_get_str(configuration, lldpctl_k_config_perm_iface_pattern)));
 	tag_datatag(w, "cid-pattern", "Interface pattern for chassis ID",
 	    N(lldpctl_atom_get_str(configuration, lldpctl_k_config_cid_pattern)));
 	tag_datatag(w, "cid-string", "Override chassis ID with",
